selected  date active css

--- a/src/app/calendar-view/components/example-view/example-view.component.html
+++ b/src/app/calendar-view/components/example-view/example-view.component.html
@@ -1,3 +1,6 @@
 <div class="cont">
-  <mymat-calendar></mymat-calendar>
+  <mymat-calendar
+    (selectedChange)="_selectedChange($event)"
+    [selected]="selectedValue"
+  ></mymat-calendar>
 </div>
