add event selectedChangeDateAsObject

--- a/src/app/calendar-view/components/example-view/example-view.component.html
+++ b/src/app/calendar-view/components/example-view/example-view.component.html
@@ -1,6 +1,7 @@
 <div class="cont">
   <mymat-calendar
     (selectedChange)="_selectedChange($event)"
+    (selectedChangeDateAsObject)="_selectedChangeDateAsObject($event)"
     [selected]="selectedValue"
   ></mymat-calendar>
 </div>
