--- a/src/app/calendar-view/components/datepicker/calendar.html
+++ b/src/app/calendar-view/components/datepicker/calendar.html
@@ -8,6 +8,7 @@
     [maxDate]="maxDate"
     [minDate]="minDate"
     [dateClass]="dateClass"
+    (selectedChangeDateAsObject)="_selectedChangeDateAsObject($event)"
     (selectedChange)="_dateSelected($event)"
     (_userSelection)="_userSelected()"
   >
